--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -14,6 +14,7 @@ jobs:
       uses: subosito/flutter-action@v2
       with:
         flutter-version: '3.0.2'
+        dart-version: '3.0.2'
 
     - name: Check out code
       uses: actions/checkout@v2
