--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -13,8 +13,7 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.0.2'
-        dart-version: '3.0.2'
+        flutter-version: stable
 
     - name: Check out code
       uses: actions/checkout@v2
