--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,31 +1,61 @@
-name: Flutter Web CI/CD
+# name: Flutter Web CI/CD
+
+# on:
+#   push:
+#     branches:
+#       # - master
+#       - dev
+#       - test
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Set up Flutter
+#       uses: subosito/flutter-action@v2
+#       with:
+#         flutter-version: '3.0.2'
+
+#     - name: Check out code
+#       uses: actions/checkout@v2
+
+#     - name: Install dependencies
+#       run: flutter pub get
+
+
+#     - name: Build web
+#       run: flutter build web
+
+  
+
+ 
+  
+name: Flutter Action
 
 on:
   push:
     branches:
       # - master
       - dev
-      - test
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Set up Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.0.2'
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'
 
-    - name: Check out code
-      uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+         flutter-version: '2.8.1'
 
-    - name: Install dependencies
-      run: flutter pub get
+      - run: flutter pub get
+      - run: flutter build apk
 
-
-    - name: Build web
-      run: flutter build web
-
- 
-  
+      - uses: actions/upload-artifact@v2
+        with:
+          name: release-apk
+          path: build/app/outputs/flutter-apk/app-release.apk
