--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -44,13 +44,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
-        with:
-          java-version: '12.x'
-
       - uses: subosito/flutter-action@v2
         with:
-         flutter-version: '3.0.2'
+          flutter-version: '1.22.x'
+          channel: 'dev'
+      - run: flutter --version
 
       - run: flutter pub get
       - run: flutter build apk
